finished insert new user screen

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -24,46 +24,53 @@
 
 			<main>
 				<div class="div-main">
-					<div class="div-form">
 
-						<div class="seja-bem-vindo">
-							<h3>Seja Bem Vindo</h3>
-						</div>
+					<form action="home.html">
 
-						<div class="email">
+						<div class="div-form">
 
-							<div class="form-group">
-								<label for="username">E-mail:</label><br>
-								<input type="text" name="username" id="username" class="form-control">
+							<div class="seja-bem-vindo">
+								<h3>Seja Bem Vindo</h3>
 							</div>
-						</div>
 
-						<div class="senha">
-							<div class="form-group">
-								<label for="password">Senha:</label><br>
-								<input type="password" name="password" id="password" class="form-control">
-							</div>
-						</div>
+							<div class="email">
 
-
-						<div class="div-3-elements">
-							<div class="div-2-links">
-								<div class="div-novo-cadastro">
-									<a href="#">Novo Cadastro</a>
-								</div>
-								<div class="div-recuperar-senha">
-									<a href="#">Recuperar Senha</a>
+								<div class="form-group">
+									<label for="username">E-mail:</label><br>
+									<input type="text" name="username" id="username" class="form-control">
 								</div>
 							</div>
 
-							<div class="div-input-entrar">
-								<a href="home.html"><input type="submit" name="submit" class="btn btn-info btn-md" value="Entrar"></a>
+							<div class="senha">
+								<div class="form-group">
+									<label for="password">Senha:</label><br>
+									<input type="password" name="password" id="password" class="form-control">
+								</div>
+							</div>
+
+
+							<div class="div-3-elements">
+								<div class="div-2-links">
+									<div class="div-novo-cadastro">
+										<a href="insert-user.html">Novo Cadastro</a>
+									</div>
+									<div class="div-recuperar-senha">
+										<a href="#">Recuperar Senha</a>
+									</div>
+								</div>
+
+								<div class="div-input-entrar">
+									<a href="home.html"><input type="submit" name="submit" class="btn btn-info btn-md"
+											value="Entrar"></a>
+
+								</div>
 
 							</div>
 
 						</div>
 
-					</div>
+					</form>
+
 				</div>
 			</main>
 
